feat(resource): enhance search and filtering